# ucc-autonomous-driving-stack

./: .gitignore  LICENSE
f1tenth_ws/: amcl_base_link.yaml  amcl_xy.csv  my_map_actually_working.pgm  my_map_actually_working.yaml  nav2_params_correct.yaml  set_up.sh.save  waypoints_xy.csv
f1tenth_ws/install/: local_setup.sh  setup.sh
f1tenth_ws/install/ackermann_mux/include/ackermann_mux/: ackermann_mux.hpp  ackermann_mux_diagnostics.hpp  ackermann_mux_diagnostics_status.hpp  params_helpers.hpp  topic_handle.hpp  utils.hpp
f1tenth_ws/install/log/: latest_list
f1tenth_ws/install/wall_following/share/wall_following/: package.sh  package.xml
f1tenth_ws/log/: latest_build
f1tenth_ws/src/automatic_braking/: package.xml  setup.cfg  setup.py
f1tenth_ws/src/autonomous_driving_pkg/: setup.cfg  setup.py
f1tenth_ws/src/autonomous_driving_pkg/autonomous_driving_pkg/: controller_node.py
f1tenth_ws/src/camera_nav/: package.xml  setup.py
f1tenth_ws/src/camera_nav/camera_nav/: camera_nav_node.py
f1tenth_ws/src/claude_nav/: setup.cfg  setup.py
f1tenth_ws/src/claude_nav/claude_nav/: claude_nav_node.py
f1tenth_ws/src/follow_gap/: package.xml  setup.cfg  setup.py
f1tenth_ws/src/follow_gap/follow_gap/: follow_gap.py
f1tenth_ws/src/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
f1tenth_ws/src/install/claude_nav/share/claude_nav/: package.ps1  package.sh  package.xml
f1tenth_ws/src/log/: latest_build
f1tenth_ws/src/person_follow/: package.xml  setup.cfg  setup.py
f1tenth_ws/src/voice_control/: setup.py
f1tenth_ws/src/voice_control/voice_control/: to_text.py  voice_command_node.py
f1tenth_ws/src/wall_following/: setup.py
(+322 files in other folders)
